Fixed 'bug'. Turns out I just need to be running the server...